--- a/konga/assets/js/app/consumers/index.html
+++ b/konga/assets/js/app/consumers/index.html
@@ -53,7 +53,7 @@
           <td><a data-ui-sref="consumers.edit({'id':consumer.id})"><strong>{{consumer.username || "-"}}</strong></a>
           </td>
           <td>{{consumer.custom_id || "-"}}</td>
-          <td>{{moment(consumer.created_at).format("MMM DD YYYY @h:mm")}}</td>
+          <td>{{moment(consumer.created_at*1000).format("MMM DD YYYY @h:mm")}}</td>
           <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
             <button type="button"
                     ng-click="deleteItem($index,consumer)" class="btn btn-danger btn-link">
