ACL plugin config in routes #231

--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -37,7 +37,7 @@
                     </a>
                   </div>
                   <p class="help-block">
-                    It used to register and authorize UMA resources. By default it takes oxd_id from Config. You can
+                    It used to register and authorize UMA resources. By default it takes oxd_id, client_id and client_secret from Config. You can
                     also enter any other oxd_id. If you leave oxd_id blank during gluu-oauth2-rs addition, it will
                     register the client in oxd and generate an application in the oxd-ecommerce platform when you
                     request for the protected resources.
