--- a/konga/assets/js/app/consumers/routes/consumer-routes.html
+++ b/konga/assets/js/app/consumers/routes/consumer-routes.html
@@ -35,13 +35,12 @@
             <span
               data-ng-show="!item.column"
               data-ng-bind-html="item.title.toUpperCase()"></span>
-
             <i class="mdi"
                data-ng-show="sort.column == item.column"
                data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"></i>
           </th>
           <th width="250" class="no-wrap">
-            SERVICE PLUGINS
+            ROUTE PLUGINS
           </th>
           <th class="no-wrap">
             CONSUMER PLUGINS
@@ -54,47 +53,47 @@
           <td></td>
           <td class="text-nowrap">
             <p class="text-muted text-small no-margin">
-              Service Plugins
+              ROUTE Plugins
             </p>
           </td>
           <td class="text-nowrap">
             <p class="text-muted text-small no-margin">
-              Service Plugins targeting this consumer
+              ROUTE Plugins targeting this consumer
             </p>
           </td>
           <td></td>
         </tr>
         <tr
-          dir-paginate="service in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage as filteredItems">
+          dir-paginate="route in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage as filteredItems">
+
           <td>
-            <i class="mdi mdi-account-group text-success" ng-if="isOpen(service)"></i>
-            <i class="mdi mdi-security-account text-warning" ng-if="isAccessControlled(service)"></i>
-            <i class="mdi mdi-security-lock text-danger" ng-if="needsAuth(service)"></i>
+
+            <i class="mdi mdi-account-group text-success" ng-if="isOpen(route)"></i>
+            <i class="mdi mdi-security-account text-warning" ng-if="isAccessControlled(route)"></i>
+            <i class="mdi mdi-security-lock text-danger" ng-if="needsAuth(route)"></i>
           </td>
           <td>
             <strong class="no-margin">
-              {{ service.name || "-" }}
+              {{route.id}}
             </strong>
           </td>
           <td>
-            {{service.host || "-"}}
+            {{ route.hosts.join(", ") || "-" }}
           </td>
           <td>
             <span class="badge badge-api-plugin" ng-class="{'badge-success badge-inverse' : item.enabled}"
-                  ng-repeat="item in getGeneralPlugins(service)">{{item.name.toUpperCase().split("-").join(" ")}}
-            </span>
+                  ng-repeat="item in getGeneralPlugins(route)">{{item.name.toUpperCase().split("-").join(" ")}}</span>
           </td>
           <td>
             <span class="badge badge-api-plugin" ng-class="{'badge-success badge-inverse' : item.enabled}"
-                  ng-repeat="item in getConsumerPlugins(service)">
-              <span class="text">{{item.name.toUpperCase().split("-").join(" ")}}</span>
-              <raw-view data-item="item"></raw-view>
-              <i class="mdi mdi-18px mdi-pencil clickable" uib-tooltip="Edit"
-                 ng-click="onEditPlugin(item)"></i>&nbsp;
-              <i class="mdi mdi-18px mdi-delete clickable" uib-tooltip="Delete"
-                 ng-click="deletePlugin(service,item)"></i>
+                  ng-repeat="item in getConsumerPlugins(route)">
+                <span class="text">{{item.name.toUpperCase().split("-").join(" ")}}</span>
+                <raw-view data-item="item"></raw-view>
+                <i class="mdi mdi-18px mdi-pencil clickable" uib-tooltip="Edit" ng-click="onEditPlugin(item)"></i>&nbsp;
+                <i class="mdi mdi-18px mdi-delete clickable" uib-tooltip="Delete"
+                   ng-click="deletePlugin(route,item)"></i>
             </span>
-            <button class="btn btn-sm btn-link" ng-click="onAddPlugin(service)">
+            <button class="btn btn-sm btn-link" ng-click="onAddPlugin(route)">
               <i class="mdi mdi-18px mdi-plus">ADD PLUGINS</i>
             </button>
           </td>
@@ -106,10 +105,10 @@
               <ul class="dropdown-menu animated fadeInUpShort go" uib-dropdown-menu role="menu"
                   aria-labelledby="single-button">
                 <li role="menuitem"><a href>
-                  <raw-view data-item="service" data-text="'Raw View'"></raw-view>
+                  <raw-view data-item="route" data-text="'Raw View'"></raw-view>
                 </a></li>
                 <li role="menuitem">
-                  <a ui-sref="services.edit({ service_id: service.id })">
+                  <a ui-sref="routes.edit({ route_id: route.id })">
                     <i class="mdi mdi-pencil"></i>&nbsp;&nbsp;
                     Edit Service
                   </a>
