Updated plugins configuration with new name #233

--- a/konga/assets/js/app/plugins/oauth-plugin.html
+++ b/konga/assets/js/app/plugins/oauth-plugin.html
@@ -38,7 +38,7 @@
                   </div>
                   <p class="help-block">
                     It used to introspect the token. By default it takes oxd_id, client_id and client_secret from Config. You can also enter any
-                    other oxd_id. If you leave oxd_id blank during gluu-oauth2-client-auth addition, it will register
+                    other oxd_id. If you leave oxd_id blank during gluu-client-auth addition, it will register
                     the client in oxd and generate an application in the oxd-ecommerce platform when the plugin uses it
                     for token introspection.
                   </p>
