--- a/konga/assets/js/app/dashboard/dashboard.html
+++ b/konga/assets/js/app/dashboard/dashboard.html
@@ -38,7 +38,7 @@
 <div data-ng-if="!loading && !error && info">
   <div class="row" vertilize-container>
     <!-- GLOBAL INFO -->
-    <div class="col-md-6">
+    <div class="col-md-12">
       <div class="panel panel-default" vertilize>
         <div class="panel-heading">
           <div class="panel-title">
@@ -84,34 +84,34 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="panel panel-default" vertilize>
-        <div class="panel-heading">
-          <div class="panel-title">
-            <i class="mdi mdi-information-outline"></i>&nbsp;PRICING
-          </div>
-        </div>
-        <table class="table no-margin">
-          <tr>
-            <td>Gluu Gateway uses oxd OAuth 2.0 client software to leverage the Gluu Server for client credentials and
-              policy enforcement. oxd is commercial software, priced $10 per OAuth client per month.
-            </td>
-          </tr>
-          <tr>
-            <td>The first 10 oxd clients are always free, and there is a five (5) day grace period for each new
-              client–meaning: only clients active for 5 or more days are recorded for billing purposes.
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://oxd.gluu.org/license/usage/" target="_blank" class="btn btn-success">
-                View your oxd usage and billing
-              </a>
-            </td>
-          </tr>
-        </table>
-      </div>
-    </div>
+    <!--<div class="col-md-6">-->
+      <!--<div class="panel panel-default" vertilize>-->
+        <!--<div class="panel-heading">-->
+          <!--<div class="panel-title">-->
+            <!--<i class="mdi mdi-information-outline"></i>&nbsp;PRICING-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<table class="table no-margin">-->
+          <!--<tr>-->
+            <!--<td>Gluu Gateway uses oxd OAuth 2.0 client software to leverage the Gluu Server for client credentials and-->
+              <!--policy enforcement. oxd is commercial software, priced $10 per OAuth client per month.-->
+            <!--</td>-->
+          <!--</tr>-->
+          <!--<tr>-->
+            <!--<td>The first 10 oxd clients are always free, and there is a five (5) day grace period for each new-->
+              <!--client–meaning: only clients active for 5 or more days are recorded for billing purposes.-->
+            <!--</td>-->
+          <!--</tr>-->
+          <!--<tr>-->
+            <!--<td>-->
+              <!--<a href="https://oxd.gluu.org/license/usage/" target="_blank" class="btn btn-success">-->
+                <!--View your oxd usage and billing-->
+              <!--</a>-->
+            <!--</td>-->
+          <!--</tr>-->
+        <!--</table>-->
+      <!--</div>-->
+    <!--</div>-->
   </div>
 
   <div class="row" vertilize-container>
