--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -12,6 +12,10 @@
     -webkit-box-shadow: inset 0 -2px 0 #f7464a;
     box-shadow: inset 0 -2px 0 #f7464a;
   }
+
+  .check-toggle {
+    letter-spacing: 0 !important;
+  }
 </style>
 <div class="row" ng-if="!loading || items.data.length">
   <div class="col-md-12">
