--- a/konga/assets/js/app/consumers/index.html
+++ b/konga/assets/js/app/consumers/index.html
@@ -56,7 +56,7 @@
           <td>{{moment(consumer.created_at*1000).format("MMM DD YYYY @h:mm")}}</td>
           <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
             <button type="button"
-                    ng-click="deleteItem($index,consumer)" class="btn btn-danger btn-link">
+                    ng-click="deleteConsumer(consumer)" class="btn btn-danger btn-link">
               <i class="mdi mdi-delete"></i>
               Delete
             </button>
