#202: Add hide credential configuration and remove default config

--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -114,6 +114,22 @@
                   </p>
                 </div>
               </div>
+              <div class="form-group">
+                <label class="col-sm-3 control-label">Hide credentials
+                  <br>
+                  <em>
+                    <small class="help-block">optional</small>
+                  </em>
+                </label>
+                <div class="col-sm-9 check-toggle">
+                  <input switch-on-text="Yes" switch-off-text="No" bs-switch type="checkbox" switch-size="small"
+                         ng-model="modelPlugin.config.hide_credentials" class="form-control"/>
+                  <p class="help-block">
+                    An optional boolean value telling the plugin to hide the credential to the upstream API server. It
+                    will be removed by Kong before proxying the request
+                  </p>
+                </div>
+              </div>
             </div>
             <div class="col-md-12">
               <div class="form-group has-feedback">
