--- a/konga/assets/js/app/consumers/create-consumer-modal.html
+++ b/konga/assets/js/app/consumers/create-consumer-modal.html
@@ -33,7 +33,7 @@
         <div class="text-danger" ng-if="errors.custom_id" data-ng-bind="errors.custom_id"></div>
         <p class="help-block">Field for storing an existing ID for the consumer, useful for mapping Kong with users in
           your existing database. You must send either this field or <code>username</code> with the request.</p>
-        <p class="help-block"><code>Note: In gluu-client-auth plugin case, you need to use your op client's client_id as custom id.</code></p>
+        <p class="help-block"><code>Note: In gluu-oauth-pep and gluu-uma-pep plugin case, you need to use your op client's client_id as custom id.</code></p>
       </div>
     </div>
 
