--- a/konga/assets/js/app/plugins/add-plugins.html
+++ b/konga/assets/js/app/plugins/add-plugins.html
@@ -37,7 +37,9 @@
          ng-class="{'panel-success' : existingPlugins.indexOf(key) > -1, 'panel-default' : existingPlugins.indexOf(key) < 0}">
       <div class="panel-heading">
         <div class="panel-title">
-          <span class="capitalize">{{key.split('-').join(" ")}}</span>
+          <span class="capitalize" data-ng-if="key == 'gluu-oauth-pep'">Gluu OAuth PEP</span>
+          <span class="capitalize" data-ng-if="key == 'gluu-uma-pep'">Gluu UMA PEP</span>
+          <span class="capitalize" data-ng-if="key != 'gluu-oauth-pep' && key != 'gluu-uma-pep'">{{key.split('-').join(" ")}}</span>
           <div class="pull-right">
             <!--Add Button in kong plugins case-->
             <button
