--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -16,6 +16,18 @@
   .check-toggle {
     letter-spacing: 0 !important;
   }
+
+  .disabled {
+    opacity: 0.5;
+    pointer-events: none;
+
+  >
+  * {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  }
 </style>
 <div class="row" ng-if="!loading || items.data.length">
   <div class="col-md-12">
@@ -23,6 +35,148 @@
       <div ba-panel ba-panel-class="with-scroll">
         <form name="PluginForm" novalidate>
           <div class="row">
+            <div class="col-md-12">
+              <div class="form-group has-feedback">
+                <label>1. UMA Scope expression configuration</label>
+                <span class="help-block error-block basic-block">Protect API paths by requiring specific UMA Scopes for certain methods. Click on <code>Add Path</code> button to start.</span>
+              </div>
+              <div class="form-group" data-ng-show="isPluginAdded">
+                <label class="col-sm-3 control-label">Ignore Scope
+                  <br>
+                  <em>
+                    <small class="help-block">optional</small>
+                  </em>
+                </label>
+                <div class="col-sm-9 check-toggle">
+                  <input switch-on-text="Yes" switch-off-text="No" bs-switch type="checkbox" switch-size="small"
+                         ng-model="modelPlugin.config.ignore_scope" class="form-control"
+                         switch-change="modelPlugin.config.deny_by_default = !modelPlugin.config.ignore_scope"/>
+                  <p class="help-block">
+                    If yes then it will not check the UMA scope during authentication time.
+                  </p>
+                </div>
+              </div>
+              <div class="form-group" data-ng-show="isPluginAdded">
+                <label class="col-sm-3 control-label">Deny by default
+                  <br>
+                  <em>
+                    <small class="help-block">optional</small>
+                  </em>
+                </label>
+                <div class="col-sm-9 check-toggle">
+                  <input switch-on-text="Yes" switch-off-text="No" bs-switch type="checkbox" switch-size="small"
+                         ng-model="modelPlugin.config.deny_by_default" class="form-control"/>
+                  <p class="help-block">
+                    It will denied access to <code>Unprotected path</code>: The path which is not registered in scope
+                    expression. Set it to <code>No</code>, to allow access to unprotected path.
+                  </p>
+                </div>
+              </div>
+              <div class="row"></div>
+              <div data-ng-disabled="modelPlugin.config.ignore_scope" ng-class="{'disabled': modelPlugin.config.ignore_scope}">
+                <div class="row" ng-repeat="element in modelPlugin.config.uma_scope_expression"
+                     ng-init="pIndex = $index"
+                     style="border: 1px dotted;">
+                  <hr/>
+                  <div class="col-md-1">
+                    <button type="button" title="Delete path" class="btn btn-danger"
+                            ng-click="modelPlugin.config.uma_scope_expression.splice($index,1)">
+                      <i class="mdi mdi-close"></i>
+                    </button>
+                  </div>
+                  <div class="col-md-11">
+                    <div class="form-group has-feedback col-md-4">
+                      <input type="text" class="form-control" value="{{context_upstream}}"
+                             title="Upstream URL" disabled/>
+                      <span class="help-block error-block basic-block" title="Kong proxy point">http://{{info.hostname}}:{{info.configuration.proxy_listeners[0].port}}</span>
+                    </div>
+                    <div class="form-group has-feedback col-md-8"
+                         ng-class="{'pathValidationClass': PluginForm['path'+$index].$invalid}">
+                      <input type="text" class="form-control" id="path{{$index}}" name="path{{$index}}"
+                             title="Enter path"
+                             placeholder="/path"
+                             ng-model="element.path"
+                             ng-required="true" required/>
+                      <span class="help-block error-block basic-block">The path which you want to have protected.</span>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="row" ng-repeat="cond in element.conditions">
+                        <div class="row">
+                          <div class="col-md-10">
+                            <div class="form-group has-feedback">
+                              <tags-input ng-model="cond.httpMethods"
+                                          id="httpMethods{{pIndex}}{{$index}}"
+                                          add-from-autocomplete-only="true"
+                                          placeholder="Enter HTTP methods" required>
+                                <auto-complete source="loadMethods($query)"
+                                               min-length="0"
+                                               debounce-delay="0"></auto-complete>
+                              </tags-input>
+                              <span class="help-block error-block basic-block"></span>
+                            </div>
+                          </div>
+                          <div class="col-md-2">
+                            <button type="button" title="Delete condition" class="btn btn-danger"
+                                    ng-click="element.conditions.splice($index,1)">
+                              <i class="mdi mdi-close"></i>
+                            </button>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <input type="hidden" value="1" name="hdScopeCount{{pIndex}}{{$index}}"/>
+                          <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}0" data-ng-if="isPluginAdded">
+                          </div>
+                          <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}0" data-ng-if="!isPluginAdded">
+                            <input type="radio" value="or" name="condition{{pIndex}}{{$index}}0" checked>or |
+                            <input type="radio" value="and" name="condition{{pIndex}}{{$index}}0">and |
+                            <input type="radio" value="!" name="condition{{pIndex}}{{$index}}0">not
+                            <button type="button" class="btn btn-xs btn-success" data-add="rule"
+                                    name="btnAdd{{pIndex}}{{$index}}0"
+                                    data-ng-click="addGroup(pIndex +''+ $index,1)"><i class="mdi mdi-plus"></i>
+                              Add Group
+                            </button>
+                            <input type="hidden" value="{{cond['scopes' + pIndex + $index + '0']}}"
+                                   name="hdScope{{pIndex}}{{$index}}0"/>
+                            <div class="form-group has-feedback">
+                              <tags-input ng-model="cond['scopes' + pIndex + $index + '0']"
+                                          name="scope{{pIndex}}{{$index}}0"
+                                          id="scopes{{pIndex}}{{$index}}"
+                                          placeholder="Enter scopes" required>
+                              </tags-input>
+                            </div>
+                            <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}1">
+                            </div>
+                          </div>
+                        </div>
+                        <hr/>
+                      </div>
+                      <div class="row">
+                        <button type="button" class="btn btn-info" ng-click="addNewCondition($index)">
+                          <i class="mdi mdi-plus"></i> Add Condition
+                        </button>
+                      </div>
+                      <br/>
+                    </div>
+                  </div>
+                </div>
+                <hr/>
+                <button type="button" class="btn btn-info" ng-click="addNewPath()">
+                  <i class="mdi mdi-plus"></i> Add path
+                </button>
+                <button type="button" class="btn btn-primary" ng-click="showResourceJSON()">
+                  <i class="mdi mdi-information"></i> View Resource Json
+                </button>
+              </div>
+            </div>
+
+            <div class="col-md-12">
+              <div class="form-group has-feedback">
+                <hr style="border: 3px solid #636355;"/>
+                <label>2. Other configurations</label>
+                <hr/>
+              </div>
+            </div>
+
             <div class="col-md-12">
               <div class="form-group">
                 <label class="col-sm-3 control-label">OXD Id
@@ -39,15 +193,14 @@
                        title="{{isShowOXDId ? 'Hide': 'Show'}}">
                       <i class="mdi mdi-eye text-primary"></i>
                     </a>
-                    <a href class="input-group-addon btn-sm" title="Clear" data-ng-click="modelPlugin.config.oxd_id = ''">
+                    <a href class="input-group-addon btn-sm" title="Clear"
+                       data-ng-click="modelPlugin.config.oxd_id = ''">
                       <i class="mdi mdi-close text-warning"></i>
                     </a>
                   </div>
                   <p class="help-block">
-                    It used to register and authorize UMA resources. By default it takes oxd_id, client_id and client_secret from Config. You can
-                    also enter any other oxd_id. If you leave oxd_id blank during gluu-uma-pep addition, it will
-                    register the client in oxd and generate an application in the oxd-ecommerce platform when you
-                    request for the protected resources.
+                    It used to register and authorize UMA resources. it will
+                    register the client in oxd and OP server. You can use existing oxd client also.
                   </p>
                 </div>
               </div>
@@ -66,7 +219,8 @@
                        title="{{isShowClientId ? 'Hide': 'Show'}}">
                       <i class="mdi mdi-eye text-primary"></i>
                     </a>
-                    <a href class="input-group-addon btn-sm" title="Clear" data-ng-click="modelPlugin.config.client_id = ''">
+                    <a href class="input-group-addon btn-sm" title="Clear"
+                       data-ng-click="modelPlugin.config.client_id = ''">
                       <i class="mdi mdi-close text-warning"></i>
                     </a>
                   </div>
@@ -90,7 +244,8 @@
                        title="{{isShowClientSecret ? 'Hide': 'Show'}}">
                       <i class="mdi mdi-eye text-primary"></i>
                     </a>
-                    <a href class="input-group-addon btn-sm" title="Clear" data-ng-click="modelPlugin.config.client_secret = ''">
+                    <a href class="input-group-addon btn-sm" title="Clear"
+                       data-ng-click="modelPlugin.config.client_secret = ''">
                       <i class="mdi mdi-close text-warning"></i>
                     </a>
                   </div>
@@ -100,17 +255,18 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">Allow Unprotected path
-                  <br>
+                <label class="col-sm-3 control-label">Anonymous
+                  <br/>
                   <em>
                     <small class="help-block">optional</small>
                   </em>
                 </label>
-                <div class="col-sm-9 check-toggle">
-                  <input switch-on-text="Yes" switch-off-text="No" bs-switch type="checkbox" switch-size="small"
-                         ng-model="modelPlugin.config.allow_unprotected_path" class="form-control"/>
+                <div class="col-sm-9">
+                  <input ng-model="modelPlugin.config.anonymous" class="form-control">
                   <p class="help-block">
-                    If yes, allow unprotected path otherwise not.
+                    An optional string (consumer uuid) value to use as an anonymous consumer if authentication fails. If
+                    empty (default), the request will fail with an authentication failure 4xx. Please note that this
+                    value must refer to the Consumer id attribute which is internal to Kong, and not its custom_id.
                   </p>
                 </div>
               </div>
@@ -131,109 +287,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-12">
-              <div class="form-group has-feedback">
-                <label><span class="text text-danger">*</span>UMA Scope expression</label>
-                <span class="help-block error-block basic-block">Protect API paths by requiring specific UMA Scopes for certain methods. Click on <code>Add Path</code> button to start.</span>
-              </div>
-              <div class="row" ng-repeat="element in modelPlugin.config.uma_scope_expression"
-                   ng-init="pIndex = $index"
-                   style="border: 1px dotted;">
-                <hr/>
-                <div class="col-md-1">
-                  <button type="button" title="Delete path" class="btn btn-danger"
-                          ng-click="modelPlugin.config.uma_scope_expression.splice($index,1)">
-                    <i class="mdi mdi-close"></i>
-                  </button>
-                </div>
-                <div class="col-md-11">
-                  <div class="form-group has-feedback col-md-4">
-                    <input type="text" class="form-control" value="{{context_upstream}}"
-                           title="Upstream URL" disabled/>
-                    <span class="help-block error-block basic-block" title="Kong proxy point">http://{{info.hostname}}:{{info.configuration.proxy_listeners[0].port}}</span>
-                  </div>
-                  <div class="form-group has-feedback col-md-8"
-                       ng-class="{'pathValidationClass': PluginForm['path'+$index].$invalid}">
-                    <input type="text" class="form-control" id="path{{$index}}" name="path{{$index}}"
-                           title="Enter path"
-                           placeholder="/path"
-                           ng-model="element.path"
-                           ng-required="true" required/>
-                    <span class="help-block error-block basic-block">The path which you want to have protected.</span>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="row" ng-repeat="cond in element.conditions">
-                      <div class="row">
-                        <div class="col-md-10">
-                          <div class="form-group has-feedback">
-                            <tags-input ng-model="cond.httpMethods"
-                                        id="httpMethods{{pIndex}}{{$index}}"
-                                        add-from-autocomplete-only="true"
-                                        placeholder="Enter HTTP methods" required>
-                              <auto-complete source="loadMethods($query)"
-                                             min-length="0"
-                                             debounce-delay="0"></auto-complete>
-                            </tags-input>
-                            <span class="help-block error-block basic-block"></span>
-                          </div>
-                        </div>
-                        <div class="col-md-2">
-                          <button type="button" title="Delete condition" class="btn btn-danger"
-                                  ng-click="element.conditions.splice($index,1)">
-                            <i class="mdi mdi-close"></i>
-                          </button>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <input type="hidden" value="1" name="hdScopeCount{{pIndex}}{{$index}}"/>
-                        <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}0" data-ng-if="isPluginAdded">
-                        </div>
-                        <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}0" data-ng-if="!isPluginAdded">
-                          <input type="radio" value="or" name="condition{{pIndex}}{{$index}}0" checked>or |
-                          <input type="radio" value="and" name="condition{{pIndex}}{{$index}}0">and |
-                          <input type="radio" value="!" name="condition{{pIndex}}{{$index}}0">not
-                          <button type="button" class="btn btn-xs btn-success" data-add="rule"
-                                  name="btnAdd{{pIndex}}{{$index}}0"
-                                  data-ng-click="addGroup(pIndex +''+ $index,1)"><i class="mdi mdi-plus"></i>
-                            Add Group
-                          </button>
-                          <input type="hidden" value="{{cond['scopes' + pIndex + $index + '0']}}"
-                                 name="hdScope{{pIndex}}{{$index}}0"/>
-                          <div class="form-group has-feedback">
-                            <tags-input ng-model="cond['scopes' + pIndex + $index + '0']"
-                                        name="scope{{pIndex}}{{$index}}0"
-                                        id="scopes{{pIndex}}{{$index}}"
-                                        placeholder="Enter scopes" required>
-                            </tags-input>
-                          </div>
-                          <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}1">
-                          </div>
-                        </div>
-                      </div>
-                      <hr/>
-                    </div>
-                    <div class="row">
-                      <button type="button" class="btn btn-info" ng-click="addNewCondition($index)">
-                        <i class="mdi mdi-plus"></i> Add Condition
-                      </button>
-                    </div>
-                    <br/>
-                  </div>
-                </div>
-              </div>
-              <hr/>
-              <button type="button" class="btn btn-info" ng-click="addNewPath()">
-                <i class="mdi mdi-plus"></i> Add path
-              </button>
-              <button type="button" class="btn btn-primary" ng-click="showResourceJSON()">
-                <i class="mdi mdi-information"></i> View Resource Json
-              </button>
-            </div>
           </div>
           <div class="row">
             <hr/>
             <button type="submit" class="btn btn-primary" ng-click="managePlugin(PluginForm)">
-              <i class="mdi mdi-check"></i> {{isPluginAdded ? "Update" : "Add" }}
+              <i class="mdi mdi-check"></i> {{isPluginAdded ? "Update Plugin" : "Add Plugin" }}
             </button>
           </div>
         </form>
