GG UI: Shows deny_by_default button

--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -56,7 +56,7 @@
                   </p>
                 </div>
               </div>
-              <div class="form-group" data-ng-show="isPluginAdded">
+              <div class="form-group">
                 <label class="col-sm-3 control-label">Deny by default
                   <br>
                   <em>
