--- a/konga/assets/js/app/consumers/create-op-client-modal.html
+++ b/konga/assets/js/app/consumers/create-op-client-modal.html
@@ -1,3 +1,17 @@
+<style>
+  .disabled {
+    opacity: 0.5;
+    pointer-events: none;
+
+  >
+  * {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  }
+</style>
+
 <div class="modal-header primary">
   <h4 class="modal-title" id="modal-title">
     Create Client
@@ -41,6 +55,18 @@
       <div class="col-sm-7">
         <input ng-model="opClient.client_secret" class="form-control" name="client_secret">
         <p class="help-block">Use any existing OP Client's client_secret. If you leave it blank, OXD server will create new client in your OP server.</p>
+      </div>
+    </div>
+
+    <div class="form-group disabled">
+      <label class="col-sm-4 control-label">Access Token as JWT</label>
+      <div class="col-sm-7 check-toggle-size">
+        <input bs-switch ng-model="opClient.access_token_as_jwt"
+               switch-size="small"
+               type="checkbox"
+               switch-on-text="YES"
+               switch-off-text="NO" />
+        <p class="help-block">Returns access token as JWT.</p>
       </div>
     </div>
 
