#289: Added OP server config option in plugin and consumer configuration

--- a/konga/assets/js/app/plugins/oauth-plugin.html
+++ b/konga/assets/js/app/plugins/oauth-plugin.html
@@ -177,6 +177,24 @@
                   <hr/>
                 </div>
               </div>
+              <div class="form-group">
+                <label class="col-sm-3 control-label">OP Server</label>
+                <div class="col-sm-9">
+                  <input ng-model="modelPlugin.config.op_url" class="form-control" />
+                  <p class="help-block">
+                    Protect your API using OP server. The URL of you OP server. Example: https://op.server.com
+                  </p>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-3 control-label">OXD Server</label>
+                <div class="col-sm-9">
+                  <input ng-model="modelPlugin.config.oxd_url" class="form-control" />
+                  <p class="help-block">
+                    The URL of you OXD server. Example: https://oxd.server.com
+                  </p>
+                </div>
+              </div>
 
               <div class="form-group">
                 <label class="col-sm-3 control-label">OXD Id
