--- a/konga/assets/js/app/consumers/create-op-client-modal.html
+++ b/konga/assets/js/app/consumers/create-op-client-modal.html
@@ -28,6 +28,34 @@
 <div class="modal-body" id="modal-body">
   <form novalidate class="form-horizontal" name="createClientForm" ng-submit="submit(createClientForm.$valid)">
     <div class="form-group"
+         ng-class="{'has-error' : createClientForm.op_host.$invalid && (createClientForm.op_host.$dirty || createClientForm.$submitted)}">
+      <label class="col-sm-4 control-label">OP Server<br><em>
+        <small class="help-block">required</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="opClient.op_host" class="form-control" name="op_host" required>
+        <div class="text-danger"
+             ng-if="createClientForm.op_host.$invalid && (createClientForm.op_host.$dirty || createClientForm.$submitted)">
+          This field is required
+        </div>
+        <p class="help-block">Enter the OP server URL, where you want to create client.</p>
+      </div>
+    </div>
+    <div class="form-group"
+         ng-class="{'has-error' : createClientForm.oxd_url.$invalid && (createClientForm.oxd_url.$dirty || createClientForm.$submitted)}">
+      <label class="col-sm-4 control-label">OXD Server<br><em>
+        <small class="help-block">required</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="opClient.oxd_url" class="form-control" name="oxd_url" required>
+        <div class="text-danger"
+             ng-if="createClientForm.oxd_url.$invalid && (createClientForm.oxd_url.$dirty || createClientForm.$submitted)">
+          This field is required
+        </div>
+        <p class="help-block">Enter the OXD server URL.</p>
+      </div>
+    </div>
+    <div class="form-group"
          ng-class="{'has-error' : createClientForm.client_name.$invalid && (createClientForm.client_name.$dirty || createClientForm.$submitted)}">
       <label class="col-sm-4 control-label">Client Name <br><em>
         <small class="help-block">required</small>
