#296: UI: Configured anonymous consumer for Gluu UMA plugins

--- a/konga/assets/js/app/plugins/oauth-plugin.html
+++ b/konga/assets/js/app/plugins/oauth-plugin.html
@@ -263,7 +263,7 @@
                   </p>
                 </div>
               </div>
-              <div class="form-group" data-ng-disabled="modelPlugin.config.deny_by_default" ng-class="{'disabled': modelPlugin.config.deny_by_default}">
+              <div class="form-group">
                 <label class="col-sm-3 control-label">Anonymous
                   <br/>
                   <em>
