--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -38,7 +38,8 @@
             <div class="col-md-12">
               <div class="form-group has-feedback">
                 <label>1. UMA PEP Scope expression configuration</label>
-                <input switch-readonly="true" switch-on-text="Enabled" switch-off-text="Disabled" bs-switch type="checkbox" switch-size="small"
+                <input switch-readonly="true" switch-on-text="Enabled" switch-off-text="Disabled" bs-switch
+                       type="checkbox" switch-size="small"
                        ng-model="modelPlugin.isPEPEnabled" class="form-control"
                        switch-change="modelPlugin.config.deny_by_default = modelPlugin.isPEPEnabled"/>
 
@@ -171,7 +172,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">OP Server</label>
                 <div class="col-sm-9">
-                  <input ng-model="modelPlugin.config.op_url" class="form-control" />
+                  <input ng-model="modelPlugin.config.op_url" class="form-control"/>
                   <p class="help-block">
                     Protect your API using OP server. The URL of you OP server. Example: https://op.server.com
                   </p>
@@ -180,7 +181,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">OXD Server</label>
                 <div class="col-sm-9">
-                  <input ng-model="modelPlugin.config.oxd_url" class="form-control" />
+                  <input ng-model="modelPlugin.config.oxd_url" class="form-control"/>
                   <p class="help-block">
                     The URL of you OXD server. Example: https://oxd.server.com
                   </p>
@@ -262,22 +263,25 @@
                   </p>
                 </div>
               </div>
-              <div class="form-group" data-ng-disabled="modelPlugin.config.deny_by_default" ng-class="{'disabled': modelPlugin.config.deny_by_default}">
-                <label class="col-sm-3 control-label">Anonymous
-                  <br/>
-                  <em>
-                    <small class="help-block">optional</small>
-                  </em>
-                </label>
-                <div class="col-sm-9">
-                  <input ng-model="modelPlugin.config.anonymous" class="form-control">
+              <div class="form-group">
+                <label class="col-sm-3 control-label">Anonymous</label>
+                <div class="col-sm-7">
+                  <input ng-model="modelPlugin.config.anonymous" ng-required="true" required class="form-control">
                   <p class="help-block">
-                    An optional string (consumer uuid) value to use as an anonymous consumer if authentication fails. If
-                    empty (default), the request will fail with an authentication failure 4xx. Please note that this
+                    An optional string (consumer uuid) value to use as an anonymous consumer if authentication fails. It
+                    will used to <code>avoid gluu-uma-auth authentication and get Permission Ticket from gluu-uma-pep
+                    plugin</code>. Please note that this
                     value must refer to the Consumer id attribute which is internal to Kong, and not its custom_id.
                   </p>
                 </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-sm btn-success" ng-click="openCreateConsumerModal()"><i
+                    class="mdi mdi-plus"></i></button>
+                  <button class="btn btn-sm btn-primary" ng-click="openConsumerListModal()"><i
+                    class="mdi mdi-format-list-bulleted"></i></button>
+                </div>
               </div>
+              <div style="clear: both"></div>
               <div class="form-group">
                 <label class="col-sm-3 control-label">Hide credentials
                   <br>
